improved ci and noti operation tracker
